--- a/stm32-starter.ioc
+++ b/stm32-starter.ioc
@@ -17,7 +17,8 @@ Mcu.IP2=MEMORYMAP
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
-Mcu.IPNb=6
+Mcu.IP6=TIM2
+Mcu.IPNb=7
 Mcu.Name=STM32H753IITx
 Mcu.Package=LQFP176
 Mcu.Pin0=PH0-OSC_IN (PH0)
@@ -25,8 +26,9 @@ Mcu.Pin1=PH1-OSC_OUT (PH1)
 Mcu.Pin2=PA13 (JTMS/SWDIO)
 Mcu.Pin3=PA14 (JTCK/SWCLK)
 Mcu.Pin4=VP_SYS_VS_Systick
-Mcu.Pin5=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.PinsNb=6
+Mcu.Pin5=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin6=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.PinsNb=7
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H753IITx
@@ -83,86 +85,90 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-false,3-MX_TIM15_Init-TIM15-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=50390625
-RCC.AHB12Freq_Value=200000000
-RCC.AHB4Freq_Value=200000000
-RCC.APB1Freq_Value=100000000
-RCC.APB2Freq_Value=100000000
-RCC.APB3Freq_Value=100000000
-RCC.APB4Freq_Value=100000000
-RCC.AXIClockFreq_Value=200000000
+RCC.AHB12Freq_Value=240000000
+RCC.AHB4Freq_Value=240000000
+RCC.APB1Freq_Value=120000000
+RCC.APB2Freq_Value=120000000
+RCC.APB3Freq_Value=120000000
+RCC.APB4Freq_Value=120000000
+RCC.AXIClockFreq_Value=240000000
 RCC.CECFreq_Value=32000
 RCC.CKPERFreq_Value=64000000
-RCC.CortexFreq_Value=400000000
-RCC.CpuClockFreq_Value=400000000
-RCC.D1CPREFreq_Value=400000000
+RCC.CortexFreq_Value=480000000
+RCC.CpuClockFreq_Value=480000000
+RCC.D1CPREFreq_Value=480000000
 RCC.D1PPRE=RCC_APB3_DIV2
 RCC.D2PPRE1=RCC_APB1_DIV2
 RCC.D2PPRE2=RCC_APB2_DIV2
 RCC.D3PPRE=RCC_APB4_DIV2
-RCC.DFSDMACLkFreq_Value=400000000
-RCC.DFSDMFreq_Value=100000000
+RCC.DFSDMACLkFreq_Value=480000000
+RCC.DFSDMFreq_Value=120000000
 RCC.DIVM1=5
-RCC.DIVN1=160
-RCC.DIVP1Freq_Value=400000000
+RCC.DIVN1=192
+RCC.DIVP1Freq_Value=480000000
 RCC.DIVP2Freq_Value=50390625
 RCC.DIVP3Freq_Value=50390625
-RCC.DIVQ1Freq_Value=400000000
+RCC.DIVQ1Freq_Value=480000000
 RCC.DIVQ2Freq_Value=50390625
 RCC.DIVQ3Freq_Value=50390625
-RCC.DIVR1Freq_Value=400000000
+RCC.DIVR1Freq_Value=480000000
 RCC.DIVR2Freq_Value=50390625
 RCC.DIVR3Freq_Value=50390625
-RCC.FDCANFreq_Value=400000000
-RCC.FMCFreq_Value=200000000
+RCC.FDCANFreq_Value=480000000
+RCC.FMCFreq_Value=240000000
 RCC.FamilyName=M
-RCC.HCLK3ClockFreq_Value=200000000
-RCC.HCLKFreq_Value=200000000
+RCC.HCLK3ClockFreq_Value=240000000
+RCC.HCLKFreq_Value=240000000
 RCC.HPRE=RCC_HCLK_DIV2
-RCC.HRTIMFreq_Value=200000000
+RCC.HRTIMFreq_Value=240000000
 RCC.HSE_VALUE=25000000
-RCC.I2C123Freq_Value=100000000
-RCC.I2C4Freq_Value=100000000
+RCC.I2C123Freq_Value=120000000
+RCC.I2C4Freq_Value=120000000
 RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
-RCC.LPTIM1Freq_Value=100000000
-RCC.LPTIM2Freq_Value=100000000
-RCC.LPTIM345Freq_Value=100000000
-RCC.LPUART1Freq_Value=100000000
+RCC.LPTIM1Freq_Value=120000000
+RCC.LPTIM2Freq_Value=120000000
+RCC.LPTIM345Freq_Value=120000000
+RCC.LPUART1Freq_Value=120000000
 RCC.LTDCFreq_Value=50390625
 RCC.MCO1PinFreq_Value=64000000
-RCC.MCO2PinFreq_Value=400000000
+RCC.MCO2PinFreq_Value=480000000
 RCC.PLLFRACN=0
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.QSPIFreq_Value=200000000
+RCC.QSPIFreq_Value=240000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=400000000
-RCC.SAI23Freq_Value=400000000
-RCC.SAI4AFreq_Value=400000000
-RCC.SAI4BFreq_Value=400000000
-RCC.SDMMCFreq_Value=400000000
-RCC.SPDIFRXFreq_Value=400000000
-RCC.SPI123Freq_Value=400000000
-RCC.SPI45Freq_Value=100000000
-RCC.SPI6Freq_Value=100000000
-RCC.SWPMI1Freq_Value=100000000
-RCC.SYSCLKFreq_VALUE=400000000
+RCC.SAI1Freq_Value=480000000
+RCC.SAI23Freq_Value=480000000
+RCC.SAI4AFreq_Value=480000000
+RCC.SAI4BFreq_Value=480000000
+RCC.SDMMCFreq_Value=480000000
+RCC.SPDIFRXFreq_Value=480000000
+RCC.SPI123Freq_Value=480000000
+RCC.SPI45Freq_Value=120000000
+RCC.SPI6Freq_Value=120000000
+RCC.SWPMI1Freq_Value=120000000
+RCC.SYSCLKFreq_VALUE=480000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.Tim1OutputFreq_Value=200000000
-RCC.Tim2OutputFreq_Value=200000000
-RCC.TraceFreq_Value=400000000
-RCC.USART16Freq_Value=100000000
-RCC.USART234578Freq_Value=100000000
-RCC.USBFreq_Value=400000000
-RCC.VCO1OutputFreq_Value=800000000
+RCC.Tim1OutputFreq_Value=240000000
+RCC.Tim2OutputFreq_Value=240000000
+RCC.TraceFreq_Value=480000000
+RCC.USART16Freq_Value=120000000
+RCC.USART234578Freq_Value=120000000
+RCC.USBFreq_Value=480000000
+RCC.VCO1OutputFreq_Value=960000000
 RCC.VCO2OutputFreq_Value=100781250
 RCC.VCO3OutputFreq_Value=100781250
 RCC.VCOInput1Freq_Value=5000000
 RCC.VCOInput2Freq_Value=781250
 RCC.VCOInput3Freq_Value=781250
+TIM2.IPParameters=Prescaler
+TIM2.Prescaler=240-1
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
